# anime-recommender

./: .gitignore  README.md  pyproject.toml
.dvc/: config
cli-setup/: export-profile.sh
docs/: aws-instances.md  data-pipeline.md  training-job.md
src/anime_recommender/: __main__.py
src/anime_recommender/constants/: __init__.py  core.py
src/anime_recommender/data/: archive.zip.dvc
src/anime_recommender/data/sample/: todo.txt
src/anime_recommender/jupyter-space/: best_job_hyperparameters.json  eda.ipynb  tuning_job_cfg.json
src/anime_recommender/scripts/: boto_sdk.py  callbacks.py  factory.py  resolvers.py  runtime.py  setup.py
src/cli-setup/: 1_uv-binaries.sh  2_set-path.sh  3_sync-activate.sh  uv-path-activate.sh
src/config/: aws-uris.yaml  aws_uris_view.py  hyperparams.json  log-config.yaml  uris_check.py
src/docs/: data-pipeline.md  pipeline.md
