[project]
name = "anime-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thanakara", email = "thkaranikolopoulos@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "alive-progress>=3.3.0",
    "boto3>=1.40.35",
    "click>=8.3.0",
    "dvc[gdrive]>=3.63.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "omegaconf>=2.3.0",
    "pandas>=2.3.2",
    "ruff>=0.13.1",
    "sagemaker>=2.251.1",
    "scikit-learn>=1.7.2",
]

[project.scripts]
ars-data = "anime_recommender:__main__.data"
ars-s3 = "anime_recommender:__main__.s3"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "I",
    "B",
    "C",
    "E",
    "F",
    "W",
]

[tool.ruff.lint.isort]
from-first = false
length-sort = true
lines-between-types = 1
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
